# IMAC-OpenGL-3D

./: CMakeLists.txt  README.md  TUTO_GIT.md  diagramme.uxf
Reorganisation_Classes_Fini/include/: Model.hpp
Reorganisation_Classes_Fini/include/glad/: glad.h
assets/models/Maison/: Chateau.mtl  Pièce1.mtl  Pièce2.mtl  Pièce3.mtl  Terrain.mtl
assets/models/Maison/TEXTURES/: Texture_vert.xcf
assets/models/Maison/TEXTURES/.mayaSwatches/: Texture_mur.png_hcm.swatch  Texture_paravents.png_hcm.swatch  Texture_toit.png_hcm.swatch
doc/: Imacity-rapport.rtf  diagramme.uxf
include/: Camera.hpp  Event.hpp  FreeflyCamera.hpp  GamePlay.hpp  Interaction.hpp  Item.hpp  Light.hpp  LoadINI.hpp  Mesh.hpp  Model.hpp  Scene.hpp  confini.h  myShader.hpp
ini_files/: Description_zones.conf  Scene1.conf  Scene2.conf  Scene3.conf  Scene4.conf
lib/confini/: Makefile  Makefile.in  config.status  configure  libconfini.la  libconfini.so.0  libconfini.so.0.5.0  libtool
lib/confini/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
lib/confini/examples/cplusplus/: map.cpp
lib/confini/pkgconfig/: libconfini.pc
lib/confini/src/: Makefile  Makefile.in
lib/confini/src/.deps/: confini.Plo
lib/confini/tests/: Makefile  Makefile.in
lib/glimac/include/glimac/: FreeflyCamera.hpp  TrackballCamera.hpp
lib/glimac/src/: FreeflyCamera.cpp  TrackballCamera.cpp
lib/glm/include/glm/gtc/: matrix_transform.hpp
lib/libconfini-master/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
lib/libconfini-master/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
lib/libconfini-master/help/: configure-options.txt  make-targets.txt
lib/libconfini-master/src/: Makefile  Makefile.in  confini.lo  libconfini.la  libconfini.pc
lib/libconfini-master/src/.deps/: confini.Plo
lib/libconfini-master/src/.libs/: libconfini.la  libconfini.lai  libconfini.so.0.5.0
lib/libconfini-master/tests/: Makefile  Makefile.in
src/: CMakeLists.txt  Event.cpp  FreeflyCamera.cpp  GamePlay.cpp  Interaction.cpp  Item.cpp  Light.cpp  LoadINI.cpp  Mesh.cpp  Model.cpp  Scene.cpp  glad.c  main.cpp  myShader.cpp  testassimp.cpp
src/shaders/: 3D.vs.glsl  lightning.fs.glsl  modelLoading.fs.glsl  modelLoading.vs.glsl  normals.fs.glsl
test/: CMakeCache.txt  Makefile  cmake_install.cmake
